create static main announcement

--- a/Kapstondaw/capstone-frontend/scss/layout/_index.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_index.scss
@@ -1,5 +1,7 @@
 @forward "header";
 @forward "subHeader";
+@forward "announcementHeader";
+
 @forward "home";
 @forward "zone4";
 @forward "about";
@@ -11,7 +13,7 @@
 @forward "hotlines";
 @forward "footer";
 @forward "copyright";
-@forward "main-news";
+@forward "main-announcement";
 
 @forward "active-menu";
 @forward "active-login";
