--- a/Kapstondaw/capstone-frontend/scss/styles.css
+++ b/Kapstondaw/capstone-frontend/scss/styles.css
@@ -175,6 +175,81 @@ header ul > :nth-child(4) {
   }
 }
 
+.announcementHeader {
+  z-index: 10;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-evenly;
+  width: 100%;
+  background-image: linear-gradient(120deg, #006630, #6ba024);
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.25);
+  height: 8vh;
+  min-width: 375px;
+}
+@media (min-width: 375px) {
+  .announcementHeader {
+    align-items: center;
+    justify-content: space-between;
+    height: 12vh;
+    padding: 0 3rem;
+  }
+}
+.announcementHeader .layer1 {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  min-width: 375px;
+}
+.announcementHeader .layer1 .logo {
+  width: 90px;
+}
+@media (min-width: 375px) {
+  .announcementHeader .layer1 .logo {
+    width: 80px;
+  }
+}
+.announcementHeader .layer1 .logo img {
+  position: absolute;
+  top: 30%;
+  width: inherit;
+}
+@media (min-width: 375px) {
+  .announcementHeader .layer1 .logo img {
+    position: static;
+  }
+}
+.announcementHeader .layer1 .brgy span {
+  color: #fff;
+  font-size: 0.8rem;
+}
+.announcementHeader .layer1 .brgy h2 {
+  color: #fff;
+  font-size: 1.2rem;
+  margin: 0;
+}
+.announcementHeader ul {
+  display: none;
+  min-width: 500px;
+}
+@media (min-width: 375px) {
+  .announcementHeader ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 600px;
+    padding: 0;
+    margin: 0;
+  }
+}
+.announcementHeader ul li {
+  color: #fff;
+  list-style: none;
+  margin: 0;
+}
+.announcementHeader ul li a {
+  color: #fff;
+}
+
 .home {
   position: relative;
   height: 60vh;
@@ -844,113 +919,41 @@ footer .com ul li {
   padding: 0.5rem;
 }
 
-.main-news {
-  display: none;
-  text-align: center;
-}
-.main-news .main-news-header {
-  z-index: 10;
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-evenly;
-  background-image: linear-gradient(120deg, #006630, #6ba024);
-  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.25);
-  height: 8vh;
-  min-width: 375px;
-}
-@media (min-width: 375px) {
-  .main-news .main-news-header {
-    align-items: center;
-    justify-content: space-between;
-    height: 12vh;
-    padding: 0 3rem;
-  }
-}
-.main-news .main-news-header .layer1 {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  min-width: 375px;
-}
-.main-news .main-news-header .layer1 .logo {
-  width: 90px;
-}
-@media (min-width: 375px) {
-  .main-news .main-news-header .layer1 .logo {
-    width: 80px;
-  }
-}
-.main-news .main-news-header .layer1 .logo img {
-  position: absolute;
-  top: 30%;
-  width: inherit;
-}
-@media (min-width: 375px) {
-  .main-news .main-news-header .layer1 .logo img {
-    position: static;
-  }
-}
-.main-news .main-news-header .layer1 .brgy span {
-  color: #fff;
-  font-size: 0.8rem;
-}
-.main-news .main-news-header .layer1 .brgy h2 {
-  color: #fff;
-  font-size: 1.2rem;
-  margin: 0;
-}
-.main-news .main-news-header ul {
-  display: none;
-  min-width: 500px;
-}
-@media (min-width: 375px) {
-  .main-news .main-news-header ul {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 600px;
-    padding: 0;
-    margin: 0;
-  }
-}
-.main-news .main-news-header ul li {
-  color: #fff;
-  list-style: none;
-  margin: o;
-}
-.main-news .title {
+.announcement_title {
   width: 100%;
   background: rgba(0, 0, 0, 0.05);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   padding: 1rem;
+  text-align: center;
   margin-bottom: 1rem;
 }
 @media (min-width: 375px) {
-  .main-news .title {
+  .announcement_title {
     padding: 1rem 5rem;
   }
 }
-.main-news .title h2 {
+.announcement_title h1 {
   margin: 0;
 }
-.main-news .container {
+
+.announcement_context {
   padding: 1rem;
 }
 @media (min-width: 375px) {
-  .main-news .container {
+  .announcement_context {
     padding: 1rem 15rem;
   }
 }
-.main-news .container .image-container {
+.announcement_context .image-container {
   background-color: red;
   -o-object-fit: cover;
      object-fit: cover;
 }
-.main-news .container .image-container img {
+.announcement_context .image-container img {
   width: 100%;
 }
-.main-news .container h2,
-.main-news .container p {
+.announcement_context h2,
+.announcement_context p {
   text-align: start;
 }
 
