add few thing an delete archive

--- a/Kapstondaw/capstone-frontend/scss/layout/_announcement.scss
+++ b/Kapstondaw/capstone-frontend/scss/layout/_announcement.scss
@@ -41,8 +41,10 @@
 
         .picture {
           width: 100%;
-          margin-bottom: 2rem;
           object-fit: cover;
+          @media (min-width: 375px) {
+            margin-bottom: 2rem;
+          }
 
           img {
             width: 100%;
