--- a/Kapstondaw/BACKENDMONATO/style2.css
+++ b/Kapstondaw/BACKENDMONATO/style2.css
@@ -33,8 +33,8 @@
 
 .left_officials .second_layer {
   display: flex;
-  align-self: center;
-  width: 100%;
+  margin-left: 20px;
+  width: 98%;
   background-color: #FFFFFF;
   height: 65px;
   margin-top: 25px;
@@ -42,43 +42,51 @@
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   flex-direction: row;
 }
-.left_officials .second_layer p {
-  width: 100%;
-  color: #000;
-  font-size: 18px;
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  padding-left: 40px;
+.left_officials .second_layer .text-cont{
+  width: 50%;
 
 }
-.left_officials .second_layer a {
-  width: 100%;
-  border-radius: 20px;
-  border: 1px solid #007236;
-  background: #FFF;
-  width: 155px;
-  height: 39px;
-  text-decoration: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-self: center;
-  margin-right: 45px;
-  
-  color: #007236;
-  font-size: 13px;
+.left_officials .second_layer .text-cont p{
+  color: #000;
+  text-align: left;
   font-family: Poppins;
+  font-size: 17px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin-left: 350px;
-  cursor: pointer;
+  margin-left: 15px;
 }
+.left_officials .second_layer .modal-cont{
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  justify-content: flex-end;
+  margin-right: 40px;
+  
+}
+.left_officials .second_layer .modal-cont a{
+  height: 39px;
+  border-radius: 20px;
+  border: 1px solid #007236;
+  background: #fff;
+  color: #007236;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  width: 105px;
+  border-radius: 20px;
+  justify-content: center;
+  margin-right: 20px;
+
+}
+.left_officials .second_layer .modal-cont a:hover {
+  cursor: pointer;
+  background-color: #007236;
+  color: #fff;
+  transition: 0.3s ease-in-out;
+}
+
 .third_layer {
   display: flex;
   align-self: center;
@@ -88,7 +96,7 @@ table {
   width: 100%;
   border-collapse: collapse;
   
-  margin: 20px;
+  margin: 10px;
   border-radius: 10px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 
