--- a/Kapstondaw/BACKENDMONATO/style4.css
+++ b/Kapstondaw/BACKENDMONATO/style4.css
@@ -577,3 +577,638 @@ tr:nth-child(even) {
   justify-content: center;
   align-items: center;
 }
+
+.household-cont {
+  display: flex;
+  align-self: center;
+  
+  padding: 20px 20px;
+  
+  margin-top: 40px;
+  width: 95%;
+  height: 400px;
+  
+  border-radius: 15px;
+  background-color: rgb(255, 255, 255);
+  filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.25));
+}
+
+.household-cont img {
+  width: 97%;
+  height: 360px;
+  position: absolute;
+}
+
+.household-cont .household-inner-cont {
+  display: flex;
+  
+  width: 100%;
+  flex-direction: row;
+}
+
+.household-cont .household-inner-cont .title-cont p {
+  position: absolute;
+  margin-left: 90px;
+  
+  width: 100%;
+  height: 30px;
+
+  flex-direction: row;
+
+  color: #000;
+
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.household-cont .household-inner-cont .household-form {
+  position: relative;
+  padding: 35px 30px;
+  width: 100%;
+  display: flex;
+}
+
+.household-cont .household-inner-cont .household-form .left-hold-cont {
+  width: 50%;
+  
+  display: flex;
+  flex-direction: column;
+
+  color: #000;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  
+  display: flex;
+  justify-content: center;
+}
+
+.household-cont .household-inner-cont .household-form .left-hold-cont .input-container {
+  display: flex;
+  padding: 5px 10px;
+  align-items: center;
+}
+
+.household-cont .household-inner-cont .household-form .left-hold-cont .input-container label {
+
+  width: 25%;
+  text-align: end;
+  margin-right: 20px;
+}
+.household-cont .household-inner-cont .household-form .left-hold-cont .input-container input {
+  width: 40%;
+  height: 28px;
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  padding-left: 5px;
+  border: solid 1px #007236;
+  
+}
+.household-cont .household-inner-cont .household-form .left-hold-cont .input-container .dob {
+  width: 25%;
+}
+.household-cont .household-inner-cont .household-form .left-hold-cont .input-container .sex {
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  width: 20%;
+  border: solid 1px #007236;
+  
+}
+
+.household-cont .household-inner-cont .household-form .right-hold-cont {
+  width: 50%;
+ 
+  flex-direction: column;
+  color: #000;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+
+  display: flex;
+  justify-content: flex-start;
+}
+
+.household-cont .household-inner-cont .household-form .right-hold-cont .input-container {
+  display: flex;
+  padding: 5px 10px;
+  align-items: center;
+}
+
+.household-cont .household-inner-cont .household-form .right-hold-cont .input-container label {
+  
+  width: 22%;
+  text-align: end;
+  margin-right: 20px;
+}
+
+.household-cont .household-inner-cont .household-form .right-hold-cont .input-container .houseNo {
+  width: 15%;
+  margin-right: 5px;
+  padding-left: 5px;
+  border: solid 1px #007236;
+  
+}
+.household-cont .household-inner-cont .household-form .right-hold-cont .input-container .streetNo {
+  width: 20%;
+  margin-right: 5px;
+  padding-left: 5px;
+  border: solid 1px #007236;
+  
+}
+.household-cont .household-inner-cont .household-form .right-hold-cont .input-container .Subdi {
+  width: 35%;
+  margin-right: 5px;
+  padding-left: 5px;
+  border: solid 1px #007236;
+  
+}
+.household-cont .household-inner-cont .household-form .right-hold-cont .input-container input {
+  width: 40%;
+  height: 28px;
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  padding-left: 5px;
+  border: solid 1px #007236;
+  
+}
+.household-cont .household-inner-cont .household-form .right-hold-cont .input-container .civilStatus {
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  width: 20%;
+  border: solid 1px #007236;
+  
+}
+
+
+.household-cont .household-inner-cont .household-form .right-hold-cont .button-cont {
+  display: flex;
+  flex-direction: row;
+  margin-top: 30px;
+  align-items: center;
+  
+  margin-left: 400px;
+}
+.household-cont .household-inner-cont .household-form .right-hold-cont .button-cont .addMember {
+  width: 48%;
+  height: 30.836px;
+  color: #000000;
+  border: none;
+  border-radius: 5px;
+  background: #FFF;
+  border: solid 1px #000000;
+  cursor: pointer;
+  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-right: 10px;
+}
+.household-cont .household-inner-cont .household-form .right-hold-cont .button-cont .addMember:hover {
+  color:white;
+  background-color: #000000;
+}
+.household-cont .household-inner-cont .household-form .right-hold-cont .button-cont .create-household {
+  width: 48%;
+  height: 30.836px;
+  color: #007236;
+  border: none;
+  border-radius: 5px;
+  background: #FFF;
+  border: solid 1px #007236;
+  cursor: pointer;
+
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+
+}
+
+.household-cont .household-inner-cont .household-form .right-hold-cont .button-cont .create-household:hover {
+  background-color: #007236;
+  color: #FFF;
+}
+
+.members-cont {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  
+  padding: 20px 20px;
+  margin-top: 20px;
+  width: 95%;
+  height: auto;   
+ 
+}
+
+.members-cont p {
+  color: #007236;
+
+  font-family: Poppins;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 20px;
+}
+.members-cont .member {
+  display: flex;
+  flex-direction: row;
+  
+
+  width: 100%;
+  height: 50px;
+  align-items: center;
+  padding: 10px 10px;
+  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+  filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.25));
+
+  color: #000;
+
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+
+  margin-bottom: 10px;
+}
+
+.members-cont .member .fullName, .address, .bday, .gender {
+  width: 20%;
+  text-align: right;
+  margin-right: 100px;
+}
+.members-cont .member .action {
+  width: 5%;
+  cursor: pointer;
+  color: #007236;
+}
+
+.modal-addMember {
+  display: flex;
+  z-index: 2;
+  height: 100vh;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.45);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: auto;
+  padding: 15% 0 0 20%;
+  display: none;
+}
+
+.modal-addMember .member-form {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  background: #f8f8f8;
+  width: 75%;
+  border-radius: 15px;
+  height: 400px;
+  padding: 20px;
+  
+}
+.modal-addMember .member-form .title-member {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.modal-addMember .member-form .title-member p {
+  color: #000;
+
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.modal-addMember .member-form .title-member img {
+  width: 15px;
+  height: 15px;
+  cursor: pointer;
+}
+.modal-addMember .member-form .member-container {
+  width: 100%;
+  display: flex;
+  margin-top: 20px;
+}
+.modal-addMember .member-form .member-container .left-member-cont {
+  width: 50%;
+  
+  display: flex;
+  flex-direction: column;
+
+  color: #000;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  
+  display: flex;
+  justify-content: center;
+}
+.modal-addMember .member-form .member-container .left-member-cont .input-container {
+  display: flex;
+  padding: 5px 10px;
+  align-items: center;
+}
+
+.modal-addMember .member-form .member-container .left-member-cont .input-container label {
+
+  width: 25%;
+  text-align: end;
+  margin-right: 20px;
+}
+.modal-addMember .member-form .member-container .left-member-cont .input-container input {
+  width: 60%;
+  height: 28px;
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  padding-left: 5px;
+  border: solid 1px #007236;
+  
+}
+.modal-addMember .member-form .member-container .left-member-cont .input-container .dob {
+  width: 30%;
+}
+.modal-addMember .member-form .member-container .left-member-cont .input-container .sex {
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  width: 25%;
+  border: solid 1px #007236;
+  
+}
+
+
+.modal-addMember .member-form .member-container .right-member-cont {
+  width: 50%;
+  
+  display: flex;
+  flex-direction: column;
+
+  color: #000;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  
+  display: flex;
+ 
+}
+
+.modal-addMember .member-form .member-container .right-member-cont .input-container input {
+  width: 60%;
+  height: 28px;
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  padding-left: 5px;
+  border: solid 1px #007236;
+  
+}
+.modal-addMember .member-form .member-container .right-member-cont .input-container .civilStatus {
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  width: 25%;
+  border: solid 1px #007236;
+  
+}
+
+.modal-addMember .member-form .member-container .right-member-cont .input-container {
+  display: flex;
+  padding: 5px 10px;
+  align-items: center;
+}
+
+.modal-addMember .member-form .member-container .right-member-cont .input-container label {
+  
+  width: 22%;
+  text-align: end;
+  margin-right: 20px;
+}
+.modal-addMember .member-form .member-container .right-member-cont .button-cont {
+ 
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 120px;
+  padding-right: 20px;
+}
+.modal-addMember .member-form .member-container .right-member-cont .button-cont input {
+  width: 25%;
+  height: 30px;
+
+  border-radius: 5px;
+  border: solid 1px #007236;
+  color: #007236;
+  cursor: pointer;
+}
+.modal-addMember .member-form .member-container .right-member-cont .button-cont input:hover {
+  background-color: #007236;
+  color: #FFF;
+}
+
+
+
+
+
+.modal-editMember {
+  display: flex;
+  z-index: 2;
+  height: 100vh;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.45);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  overflow: auto;
+  padding: 15% 0 0 20%;
+  display: none;
+}
+
+.modal-editMember .member-form {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  background: #f8f8f8;
+  width: 75%;
+  border-radius: 15px;
+  height: 400px;
+  padding: 20px;
+  
+}
+.modal-editMember .member-form .title-member {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.modal-editMember .member-form .title-member p {
+  color: #000;
+
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+.modal-editMember .member-form .title-member img {
+  width: 15px;
+  height: 15px;
+  cursor: pointer;
+}
+.modal-editMember .member-form .member-container {
+  width: 100%;
+  display: flex;
+  margin-top: 20px;
+}
+.modal-editMember .member-form .member-container .left-member-cont {
+  width: 50%;
+  
+  display: flex;
+  flex-direction: column;
+
+  color: #000;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  
+  display: flex;
+  justify-content: center;
+}
+.modal-editMember .member-form .member-container .left-member-cont .input-container {
+  display: flex;
+  padding: 5px 10px;
+  align-items: center;
+}
+
+.modal-editMember .member-form .member-container .left-member-cont .input-container label {
+
+  width: 25%;
+  text-align: end;
+  margin-right: 20px;
+}
+.modal-editMember .member-form .member-container .left-member-cont .input-container input {
+  width: 60%;
+  height: 28px;
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  padding-left: 5px;
+  border: solid 1px #007236;
+  
+}
+.modal-editMember .member-form .member-container .left-member-cont .input-container .dob {
+  width: 30%;
+}
+.modal-editMember .member-form .member-container .left-member-cont .input-container .sex {
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  width: 25%;
+  border: solid 1px #007236;
+  
+}
+
+
+.modal-editMember .member-form .member-container .right-member-cont {
+  width: 50%;
+  
+  display: flex;
+  flex-direction: column;
+
+  color: #000;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  
+  display: flex;
+ 
+}
+
+.modal-editMember .member-form .member-container .right-member-cont .input-container input {
+  width: 60%;
+  height: 28px;
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  padding-left: 5px;
+  border: solid 1px #007236;
+  
+}
+.modal-editMember .member-form .member-container .right-member-cont .input-container .civilStatus {
+  fill: #FFF;
+  border-radius: 3px;
+  border: none;
+  width: 25%;
+  border: solid 1px #007236;
+  
+}
+
+.modal-editMember .member-form .member-container .right-member-cont .input-container {
+  display: flex;
+  padding: 5px 10px;
+  align-items: center;
+}
+
+.modal-editMember .member-form .member-container .right-member-cont .input-container label {
+  
+  width: 22%;
+  text-align: end;
+  margin-right: 20px;
+}
+.modal-editMember .member-form .member-container .right-member-cont .button-cont {
+ 
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 120px;
+  padding-right: 20px;
+}
+.modal-editMember .member-form .member-container .right-member-cont .button-cont input {
+  width: 25%;
+  height: 30px;
+
+  border-radius: 5px;
+  border: solid 1px #007236;
+  color: #007236;
+  cursor: pointer;
+}
+.modal-editMember .member-form .member-container .right-member-cont .button-cont input:hover {
+  background-color: #007236;
+  color: #FFF;
+}
