--- a/Kapstondaw/BACKENDMONATO/style4.css
+++ b/Kapstondaw/BACKENDMONATO/style4.css
@@ -461,7 +461,7 @@ tr:nth-child(even) {
   width: 50%;
   justify-content: flex-end;
   align-self: center;
-  margin-top: 85px;
+  margin-top: 5px;
   display: flex;
   text-decoration: none;
 
@@ -472,7 +472,24 @@ tr:nth-child(even) {
   font-weight: 500;
   line-height: normal;
 }
-
+.backContainer {
+  display: flex;
+  margin: 15px 15px;
+  cursor: pointer;
+}
+.backContainer img {
+  width: 15px;
+  height: 15px;
+}
+.backContainer p {
+  margin-left: 5px;
+  color: #000;
+  font-size: 10px;
+  font-family: Poppins;
+  font-style: italic;
+  font-weight: 500;
+  line-height: normal;
+}
 .add-residents-cont {
   display: flex;
   width: 97%;
@@ -577,25 +594,29 @@ tr:nth-child(even) {
   justify-content: center;
   align-items: center;
 }
-
+.household-form {
+  display: flex;
+  justify-content: center;
+}
 .household-cont {
   display: flex;
   align-self: center;
+
   
   padding: 20px 20px;
   
-  margin-top: 40px;
   width: 95%;
-  height: 400px;
+  height: 380px;
   
   border-radius: 15px;
   background-color: rgb(255, 255, 255);
   filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.25));
+  margin: 40px 0;
 }
 
 .household-cont img {
   width: 97%;
-  height: 360px;
+  height: 340px;
   position: absolute;
 }
 
@@ -607,28 +628,11 @@ tr:nth-child(even) {
 }
 
 .household-cont .household-inner-cont .title-cont p {
+  margin-top: -40px;
   position: absolute;
-  margin-left: 90px;
+  margin-left: 100px;
   justify-content: flex-start;
-  
-  width: 100%;
-  height: 30px;
 
-  flex-direction: row;
-
-  color: #000;
-
-  font-family: Poppins;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-}
-.household-cont .household-inner-cont .title-cont1 p {
-  position: absolute;
-  display: flex;
-  justify-content: flex-start;
-  margin-left: 120px;
   
   width: 100%;
   height: 30px;
@@ -644,16 +648,17 @@ tr:nth-child(even) {
   line-height: normal;
 }
 
-.household-cont .household-inner-cont .household-form {
+.household-cont .household-inner-cont {
   position: relative;
   padding: 35px 30px;
   width: 100%;
   display: flex;
+  
 }
 
-.household-cont .household-inner-cont .household-form .left-hold-cont {
+.household-cont .household-inner-cont .left-hold-cont {
   width: 50%;
-  
+ 
   display: flex;
   flex-direction: column;
 
@@ -664,23 +669,22 @@ tr:nth-child(even) {
   font-weight: 500;
   line-height: normal;
   
-  display: flex;
-  justify-content: center;
+  justify-content: flex-start;
 }
 
-.household-cont .household-inner-cont .household-form .left-hold-cont .input-container {
+.household-cont .household-inner-cont .left-hold-cont .input-container {
   display: flex;
   padding: 5px 10px;
   align-items: center;
 }
 
-.household-cont .household-inner-cont .household-form .left-hold-cont .input-container label {
+.household-cont .household-inner-cont .left-hold-cont .input-container label {
 
   width: 25%;
   text-align: end;
   margin-right: 20px;
 }
-.household-cont .household-inner-cont .household-form .left-hold-cont .input-container input {
+.household-cont .household-inner-cont .left-hold-cont .input-container input {
   width: 40%;
   height: 28px;
   fill: #FFF;
@@ -690,10 +694,10 @@ tr:nth-child(even) {
   border: solid 1px #007236;
   
 }
-.household-cont .household-inner-cont .household-form .left-hold-cont .input-container .dob {
+.household-cont .household-inner-cont .left-hold-cont .input-container .dob {
   width: 25%;
 }
-.household-cont .household-inner-cont .household-form .left-hold-cont .input-container .sex {
+.household-cont .household-inner-cont .left-hold-cont .input-container .sex {
   fill: #FFF;
   border-radius: 3px;
   border: none;
@@ -702,9 +706,9 @@ tr:nth-child(even) {
   
 }
 
-.household-cont .household-inner-cont .household-form .right-hold-cont {
+.household-cont .household-inner-cont .right-hold-cont {
   width: 50%;
- 
+
   flex-direction: column;
   color: #000;
   font-family: Poppins;
@@ -717,41 +721,41 @@ tr:nth-child(even) {
   justify-content: flex-start;
 }
 
-.household-cont .household-inner-cont .household-form .right-hold-cont .input-container {
+.household-cont .household-inner-cont .right-hold-cont .input-container {
   display: flex;
   padding: 5px 10px;
   align-items: center;
 }
 
-.household-cont .household-inner-cont .household-form .right-hold-cont .input-container label {
+.household-cont .household-inner-cont .right-hold-cont .input-container label {
   
   width: 22%;
   text-align: end;
   margin-right: 20px;
 }
 
-.household-cont .household-inner-cont .household-form .right-hold-cont .input-container .houseNo {
+.household-cont .household-inner-cont .right-hold-cont .input-container .houseNo {
   width: 15%;
   margin-right: 5px;
   padding-left: 5px;
   border: solid 1px #007236;
   
 }
-.household-cont .household-inner-cont .household-form .right-hold-cont .input-container .streetNo {
+.household-cont .household-inner-cont .right-hold-cont .input-container .streetNo {
   width: 20%;
   margin-right: 5px;
   padding-left: 5px;
   border: solid 1px #007236;
   
 }
-.household-cont .household-inner-cont .household-form .right-hold-cont .input-container .Subdi {
+.household-cont .household-inner-cont .right-hold-cont .input-container .Subdi {
   width: 35%;
   margin-right: 5px;
   padding-left: 5px;
   border: solid 1px #007236;
   
 }
-.household-cont .household-inner-cont .household-form .right-hold-cont .input-container input {
+.household-cont .household-inner-cont .right-hold-cont .input-container input {
   width: 40%;
   height: 28px;
   fill: #FFF;
@@ -761,7 +765,7 @@ tr:nth-child(even) {
   border: solid 1px #007236;
   
 }
-.household-cont .household-inner-cont .household-form .right-hold-cont .input-container .civilStatus {
+.household-cont .household-inner-cont .right-hold-cont .input-container .civilStatus {
   fill: #FFF;
   border-radius: 3px;
   border: none;
@@ -771,32 +775,24 @@ tr:nth-child(even) {
 }
 
 
-.household-cont .household-inner-cont .household-form .right-hold-cont .button-cont {
+.household-cont .household-inner-cont .right-hold-cont .button-cont {
   display: flex;
   flex-direction: row;
-  margin-top: 30px;
+  margin-top: 105px;
+  margin-right: -30px;
   align-items: center;
   justify-content: flex-end;
   
-  
 }
 
-.household-cont .household-inner-cont .household-form .right-hold-cont .button-cont1 {
-  display: flex;
-  flex-direction: row;
-  margin-top: 70px;
-  align-items: center;
-
-  justify-content: flex-end;
-}
-.household-cont .household-inner-cont .household-form .right-hold-cont .button-cont .addMember {
+.household-cont .household-inner-cont .right-hold-cont .button-cont .addMember {
   width: 15%;
   height: 30.836px;
-  color: #000000;
+  color: #0004ff;
   border: none;
   border-radius: 5px;
   background: #FFF;
-  border: solid 1px #000000;
+  border: solid 1px #0004ff;
   cursor: pointer;
   
   display: flex;
@@ -811,11 +807,11 @@ tr:nth-child(even) {
   line-height: normal;
   margin-right: 10px;
 }
-.household-cont .household-inner-cont .household-form .right-hold-cont .button-cont .addMember:hover {
+.household-cont .household-inner-cont .right-hold-cont .button-cont .addMember:hover {
   color:white;
-  background-color: #000000;
+  background-color: #0004ff;
 }
-.household-cont .household-inner-cont .household-form .right-hold-cont .button-cont .create-household {
+.household-cont .household-inner-cont .right-hold-cont .button-cont .create-household {
   width: 15%;
   height: 30.836px;
   color: #007236;
@@ -833,12 +829,12 @@ tr:nth-child(even) {
 
 }
 
-.household-cont .household-inner-cont .household-form .right-hold-cont .button-cont .create-household:hover {
+.household-cont .household-inner-cont .right-hold-cont .button-cont .create-household:hover {
   background-color: #007236;
   color: #FFF;
 }
 
-.household-cont .household-inner-cont .household-form .right-hold-cont .button-cont1 .create-household1 {
+.household-cont .household-inner-cont .right-hold-cont .button-cont1 .create-household1 {
   width: 15%;
   height: 30.836px;
   color: #007236;
@@ -856,412 +852,198 @@ tr:nth-child(even) {
 
 }
 
-.household-cont .household-inner-cont .household-form .right-hold-cont .button-cont1 .create-household1:hover {
+.household-cont .household-inner-cont .right-hold-cont .button-cont1 .create-household1:hover {
   background-color: #007236;
   color: #FFF;
 }
 
-.members-cont {
+
+.addBtnContainer {
   display: flex;
-  flex-direction: column;
-  align-self: center;
+  justify-content: flex-end;
+  background-color: red;
+  margin-right: 50px;
+
+}
+.addBtnContainer .addMember {
+  width: 7%;
+  height: 30.836px;
+  color: #0004ff;
+  border: none;
+  border-radius: 5px;
+  background: #FFF;
+  border: solid 1px #0004ff;
+  cursor: pointer;
   
-  padding: 20px 20px;
-  margin-top: 20px;
-  width: 95%;
-  height: auto;   
- 
-}
-
-.members-cont p {
-  color: #007236;
-
-  font-family: Poppins;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  margin-bottom: 20px;
-}
-.members-cont .member {
   display: flex;
-  flex-direction: row;
-  
-
-  width: 100%;
-  height: 50px;
   align-items: center;
-  padding: 10px 10px;
-  border-radius: 10px;
-  background-color: rgb(255, 255, 255);
-  filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.25));
+  justify-content: center;
+
+
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.addResidentsTable {
+  max-width: 100%;
+  border-collapse: collapse;
+ 
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 
   color: #000;
-
+  font-size: 10px;
   font-family: Poppins;
-  font-size: 14px;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 400;
   line-height: normal;
-
   margin-bottom: 10px;
 }
 
-.members-cont .member .fullName, .address, .bday, .gender {
-  width: 20%;
-  text-align: right;
-  margin-right: 100px;
+.addResidentsTable thead {
+  background-color: #4b804b27;
 }
-.members-cont .member .action {
-  width: 5%;
-  cursor: pointer;
-  color: #007236;
-}
-
-.modal-addMember {
-  display: flex;
-  z-index: 2;
-  height: 100vh;
-  position: fixed;
-  background: rgba(0, 0, 0, 0.45);
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  overflow: auto;
-  padding: 15% 0 0 20%;
-  display: none;
-}
-
-.modal-addMember .member-form {
-  display: flex;
-  position: relative;
-  flex-direction: column;
-  background: #f8f8f8;
-  width: 75%;
-  border-radius: 15px;
-  height: 400px;
-  padding: 20px;
-  
-}
-.modal-addMember .member-form .title-member {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.modal-addMember .member-form .title-member p {
-  color: #000;
-
-  font-family: Poppins;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-}
-.modal-addMember .member-form .title-member img {
-  width: 15px;
-  height: 15px;
-  cursor: pointer;
-}
-.modal-addMember .member-form .member-container {
+.addResidentsTable tr td input {
   width: 100%;
-  display: flex;
-  margin-top: 20px;
-}
-.modal-addMember .member-form .member-container .left-member-cont {
-  width: 50%;
-  
-  display: flex;
-  flex-direction: column;
-
-  color: #000;
-  font-family: Poppins;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  
-  display: flex;
-  justify-content: center;
-}
-.modal-addMember .member-form .member-container .left-member-cont .input-container {
-  display: flex;
-  padding: 5px 10px;
-  align-items: center;
-}
-
-.modal-addMember .member-form .member-container .left-member-cont .input-container label {
-
-  width: 25%;
-  text-align: end;
-  margin-right: 20px;
-}
-.modal-addMember .member-form .member-container .left-member-cont .input-container input {
-  width: 60%;
-  height: 28px;
+  height: 30px;
   fill: #FFF;
-  border-radius: 3px;
-  border: none;
+  border-radius: 2px;
+  border: solid 1px #4b804b81;
   padding-left: 5px;
-  border: solid 1px #007236;
   
-}
-.modal-addMember .member-form .member-container .left-member-cont .input-container .dob {
-  width: 30%;
-}
-.modal-addMember .member-form .member-container .left-member-cont .input-container .sex {
-  fill: #FFF;
-  border-radius: 3px;
-  border: none;
-  width: 25%;
-  border: solid 1px #007236;
-  
-}
-
-
-.modal-addMember .member-form .member-container .right-member-cont {
-  width: 50%;
-  
-  display: flex;
-  flex-direction: column;
-
-  color: #000;
+  color: #000000;
+  font-size: 10px;
   font-family: Poppins;
-  font-size: 14px;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 700;
   line-height: normal;
-  
-  display: flex;
+}
+.addResidentsTable tr td input[type="radio"] {
+  cursor: pointer;
+}
+
+.addResidentsTable thead tr .no {
+  width: 4%;
  
 }
-
-.modal-addMember .member-form .member-container .right-member-cont .input-container input {
-  width: 60%;
-  height: 28px;
-  fill: #FFF;
-  border-radius: 3px;
-  border: none;
-  padding-left: 5px;
-  border: solid 1px #007236;
-  
-}
-.modal-addMember .member-form .member-container .right-member-cont .input-container .civilStatus {
-  fill: #FFF;
-  border-radius: 3px;
-  border: none;
-  width: 25%;
-  border: solid 1px #007236;
+.addResidentsTable thead tr .houseTitle {
+  width: 1%;
   
 }
 
-.modal-addMember .member-form .member-container .right-member-cont .input-container {
-  display: flex;
-  padding: 5px 10px;
-  align-items: center;
-}
-
-.modal-addMember .member-form .member-container .right-member-cont .input-container label {
-  
-  width: 22%;
-  text-align: end;
-  margin-right: 20px;
-}
-.modal-addMember .member-form .member-container .right-member-cont .button-cont {
+.addResidentsTable tr td select {
  
+  height: 30px;
+  fill: #FFF;
+  border-radius: 2px;
+  border: solid 1px #4b804b81;
+  padding-left: 5px;
+  
+}
+
+.addResidentsTable thead tr th {
+  color: #000000;
+  font-size: 10px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.addResidentsTable th,
+td {
+  padding: 8px;
+  text-align: center;
+}
+
+.addResidentsTable tr:nth-child(even) {
+  background-color: #4b804b27;
+}
+.addResidentsTable tbody tr td input[type="radio"] {
+  width: 18px; /* Set the width to your preferred size */
+  height: 18px; /* Set the height to your preferred size */
+  margin: 0;
+  vertical-align: middle;
+  position: relative;
+  
+}
+
+
+.DeleteBtn {
+  cursor: pointer;
+  color: #ff0000;
+  font-size: 10px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.submitHouseholdCont {
+  
   width: 100%;
   display: flex;
   justify-content: flex-end;
-  margin-top: 120px;
-  padding-right: 20px;
+  
 }
-.modal-addMember .member-form .member-container .right-member-cont .button-cont input {
-  width: 25%;
-  height: 30px;
-
-  border-radius: 5px;
-  border: solid 1px #007236;
+.submitHousehold {
+  width: auto;
+  padding: 5px 25px;
+  height: 30.836px;
   color: #007236;
+  border: none;
+  border-radius: 5px;
+  background: #FFF;
+  border: solid 1px #007236;
   cursor: pointer;
+
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: 10px 10px;
+  
+
 }
-.modal-addMember .member-form .member-container .right-member-cont .button-cont input:hover {
+.submitHousehold:hover {
   background-color: #007236;
   color: #FFF;
 }
+.addRowCont {
 
-
-
-
-
-.modal-editMember {
-  display: flex;
-  z-index: 2;
-  height: 100vh;
-  position: fixed;
-  background: rgba(0, 0, 0, 0.45);
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  overflow: auto;
-  padding: 15% 0 0 20%;
-  display: none;
-}
-
-.modal-editMember .member-form {
-  display: flex;
-  position: relative;
-  flex-direction: column;
-  background: #f8f8f8;
-  width: 75%;
-  border-radius: 15px;
-  height: 400px;
-  padding: 20px;
-  
-}
-.modal-editMember .member-form .title-member {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.modal-editMember .member-form .title-member p {
-  color: #000;
-
-  font-family: Poppins;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-}
-.modal-editMember .member-form .title-member img {
-  width: 15px;
-  height: 15px;
-  cursor: pointer;
-}
-.modal-editMember .member-form .member-container {
-  width: 100%;
-  display: flex;
-  margin-top: 20px;
-}
-.modal-editMember .member-form .member-container .left-member-cont {
-  width: 50%;
-  
-  display: flex;
-  flex-direction: column;
-
-  color: #000;
-  font-family: Poppins;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  
-  display: flex;
-  justify-content: center;
-}
-.modal-editMember .member-form .member-container .left-member-cont .input-container {
-  display: flex;
-  padding: 5px 10px;
-  align-items: center;
-}
-
-.modal-editMember .member-form .member-container .left-member-cont .input-container label {
-
-  width: 25%;
-  text-align: end;
-  margin-right: 20px;
-}
-.modal-editMember .member-form .member-container .left-member-cont .input-container input {
-  width: 60%;
-  height: 28px;
-  fill: #FFF;
-  border-radius: 3px;
-  border: none;
-  padding-left: 5px;
-  border: solid 1px #007236;
-  
-}
-.modal-editMember .member-form .member-container .left-member-cont .input-container .dob {
-  width: 30%;
-}
-.modal-editMember .member-form .member-container .left-member-cont .input-container .sex {
-  fill: #FFF;
-  border-radius: 3px;
-  border: none;
-  width: 25%;
-  border: solid 1px #007236;
-  
-}
-
-
-.modal-editMember .member-form .member-container .right-member-cont {
-  width: 50%;
-  
-  display: flex;
-  flex-direction: column;
-
-  color: #000;
-  font-family: Poppins;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  
-  display: flex;
- 
-}
-
-.modal-editMember .member-form .member-container .right-member-cont .input-container input {
-  width: 60%;
-  height: 28px;
-  fill: #FFF;
-  border-radius: 3px;
-  border: none;
-  padding-left: 5px;
-  border: solid 1px #007236;
-  
-}
-.modal-editMember .member-form .member-container .right-member-cont .input-container .civilStatus {
-  fill: #FFF;
-  border-radius: 3px;
-  border: none;
-  width: 25%;
-  border: solid 1px #007236;
-  
-}
-
-.modal-editMember .member-form .member-container .right-member-cont .input-container {
-  display: flex;
-  padding: 5px 10px;
-  align-items: center;
-}
-
-.modal-editMember .member-form .member-container .right-member-cont .input-container label {
-  
-  width: 22%;
-  text-align: end;
-  margin-right: 20px;
-}
-.modal-editMember .member-form .member-container .right-member-cont .button-cont {
- 
   width: 100%;
   display: flex;
   justify-content: flex-end;
-  margin-top: 120px;
-  padding-right: 20px;
+  margin-left: -120px;
+  margin-top: -51px;
 }
-.modal-editMember .member-form .member-container .right-member-cont .button-cont input {
-  width: 25%;
-  height: 30px;
-
+.addRow {
+  padding: 5px 16px;
+  width: auto;
+  height: 30.836px;
+  color: #150072;
+  border: none;
   border-radius: 5px;
-  border: solid 1px #007236;
-  color: #007236;
+  background: #FFF;
+  border: solid 1px #150072;
   cursor: pointer;
+
+  font-family: Poppins;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: 10px 10px;
 }
-.modal-editMember .member-form .member-container .right-member-cont .button-cont input:hover {
-  background-color: #007236;
+
+.addRow:hover {
+  background-color: #150072;
   color: #FFF;
+}
+
+.table-wrapper {
+  overflow-x: auto;
+  max-width: 100%; /* Ensure the table wrapper expands to the width of its content */
 }
