medyo marami nabago

--- a/Kapstondaw/BACKENDMONATO/style1.css
+++ b/Kapstondaw/BACKENDMONATO/style1.css
@@ -37,15 +37,11 @@
 .rectangle {
   background: rgba(0, 0, 0, 0.05);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);  
-  width: 100%;
+  width: 96.2%;
   height: 50px;
   margin-top: 85px;
-  
   display: flex;
-  
   align-items: center;
-
-  border-bottom-right-radius: 10px;
 
   justify-content: space-between;
 
@@ -68,7 +64,7 @@
   font-size: 15px;
   line-height: 38px;
   /* identical to box height */
-  margin-right: 90px;
+  margin-right: 60px;
   color: black;
 }
 
@@ -85,9 +81,9 @@ a {
 }
 .line-container {
   width: 100%;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding-left: 20px;
+  margin: 30px;
+  display: flex;
+  justify-content: center;
 }
 
 .population {
@@ -95,8 +91,7 @@ a {
   flex-direction: column;
   width: 325px;
   height: 140px;
-  margin-top: 20px;
-  margin-left: 15px;
+  margin: 10px 10px;
   background: #F8F8F8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
@@ -116,7 +111,7 @@ a {
 .containerLogs {
   display: flex;
   justify-content: center;
-  width: 900px;
+  width: 1000px;
   align-self: center;
   flex-direction: column;
 }
@@ -160,7 +155,8 @@ tr:nth-child(even) {
   justify-content: center;
   align-items: center;
   align-self: flex-end;
-  margin-top: 50px;
+  margin-top: 30px;
+  margin-bottom: 100px;
   cursor: pointer;
 
   color: #FFF;
@@ -260,8 +256,7 @@ tr:nth-child(even) {
 .male {
   width: 325px;
   height: 140px;
-  margin-top: 20px;
-  margin-left: 15px;
+  margin: 10px 10px;
   background: #F8F8F8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
@@ -269,7 +264,7 @@ tr:nth-child(even) {
 
 .a2-m {
   height: 15%;
-  background: #7B9FFC;
+  background: #2c67fd;
   border-radius: 0px 0px 5px 5px;
   display: flex;
   flex-direction: row;
@@ -301,7 +296,7 @@ tr:nth-child(even) {
   display: flex;
   align-items: center;
   
-  color: #7B9FFC;
+  color: #2c67fd;
 }
 .a1 .b2 .c4-m {
   display: flex;
@@ -311,15 +306,14 @@ tr:nth-child(even) {
   margin-left: 35px;
   width: 80px;
   height: 80px;
-  background: #7B9FFC;
+  background: #2c67fd;
   border-radius: 10px;
 }
 
 .female {
   width: 325px;
   height: 140px;
-  margin-top: 20px;
-  margin-left: 15px;
+  margin: 10px 10px;
   background: #F8F8F8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
@@ -375,8 +369,7 @@ tr:nth-child(even) {
 .voters {
   width: 325px;
   height: 140px;
-  margin-top: 20px;
-  margin-left: 15px;
+  margin: 10px 10px;
   background: #F8F8F8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
@@ -432,8 +425,7 @@ tr:nth-child(even) {
 .nonvoters {
   width: 325px;
   height: 140px;
-  margin-top: 20px;
-  margin-left: 15px;
+  margin: 10px 10px;
   background: #F8F8F8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
@@ -488,8 +480,7 @@ tr:nth-child(even) {
 .blotter {
   width: 325px;
   height: 140px;
-  margin-top: 20px;
-  margin-left: 15px;
+  margin: 10px 10px;
   background: #F8F8F8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
@@ -542,11 +533,66 @@ tr:nth-child(even) {
   border-radius: 10px;
 }
 
+.osc {
+  width: 325px;
+  height: 140px;
+  margin: 10px 10px;
+  background: #F8F8F8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+}
+.a2-osc {
+  height: 15%;
+  background: #05570c;
+  border-radius: 0px 0px 5px 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.a2-osc .b3 {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  display: flex;
+  align-items: center;
+  margin-right: 5px;
+  color: #FFFFFF;
+}
+.a2-osc .b4 img{
+  margin-top: 4px;
+}
+.a1 .b1 .c2-osc {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 35px;
+  line-height: 52px;
+  display: flex;
+  align-items: center;
+  
+  color: #05570c;
+}
+.a1 .b2 .c4-osc {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-left: 35px;
+  width: 80px;
+  height: 80px;
+  background: #05570c;
+  border-radius: 10px;
+}
+
 .osy {
   width: 325px;
   height: 140px;
-  margin-top: 20px;
-  margin-left: 15px;
+  margin: 10px 10px;
   background: #F8F8F8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
@@ -601,8 +647,7 @@ tr:nth-child(even) {
 .pwd {
   width: 325px;
   height: 140px;
-  margin-top: 20px;
-  margin-left: 15px;
+  margin: 10px 10px;
   background: #F8F8F8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
@@ -654,11 +699,230 @@ tr:nth-child(even) {
   background: #A82222;
   border-radius: 10px;
 }
+.soloParent {
+  width: 325px;
+  height: 140px;
+  margin: 10px 10px;
+  background: #F8F8F8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+}
+.a2-soloP {
+  height: 15%;
+  background: #fdbd0b;
+  border-radius: 0px 0px 5px 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.a2-soloP .b3 {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  display: flex;
+  align-items: center;
+  margin-right: 5px;
+  color: #FFFFFF;
+}
+.a2-soloP .b4 img{
+  margin-top: 4px;
+}
+.a1 .b1 .c2-soloP {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 35px;
+  line-height: 52px;
+  display: flex;
+  align-items: center;
+  
+  color: #fdbd0b;
+}
+.a1 .b2 .c4-soloP {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-left: 35px;
+  width: 80px;
+  height: 80px;
+  background: #fdbd0b;
+  border-radius: 10px;
+}
+.labor {
+  width: 325px;
+  height: 140px;
+  margin: 10px 10px;
+  background: #F8F8F8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+}
+.a2-lbr {
+  height: 15%;
+  background: #1f313b;
+  border-radius: 0px 0px 5px 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.a2-lbr .b3 {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  display: flex;
+  align-items: center;
+  margin-right: 5px;
+  color: #FFFFFF;
+}
+.a2-lbr .b4 img{
+  margin-top: 4px;
+}
+.a1 .b1 .c2-lbr {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 35px;
+  line-height: 52px;
+  display: flex;
+  align-items: center;
+  
+  color: #1f313b;
+}
+.a1 .b2 .c4-lbr {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-left: 35px;
+  width: 80px;
+  height: 80px;
+  background: #1f313b;
+  border-radius: 10px;
+}
+.unemploy {
+  width: 325px;
+  height: 140px;
+  margin: 10px 10px;
+  background: #F8F8F8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+}
+.a2-ploy {
+  height: 15%;
+  background: #000000;
+  border-radius: 0px 0px 5px 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.a2-ploy .b3 {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  display: flex;
+  align-items: center;
+  margin-right: 5px;
+  color: #FFFFFF;
+}
+.a2-ploy .b4 img{
+  margin-top: 4px;
+}
+.a1 .b1 .c2-ploy {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 35px;
+  line-height: 52px;
+  display: flex;
+  align-items: center;
+  
+  color: #000000;
+}
+.a1 .b2 .c4-ploy {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-left: 35px;
+  width: 80px;
+  height: 80px;
+  background: #000000;
+  border-radius: 10px;
+}
+.ofw {
+  width: 325px;
+  height: 140px;
+  margin: 10px 10px;
+  background: #F8F8F8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+}
+.a2-ofw {
+  height: 15%;
+  background: #28c9bb;
+  border-radius: 0px 0px 5px 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.a2-ofw .b3 {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  display: flex;
+  align-items: center;
+  margin-right: 5px;
+  color: #FFFFFF;
+}
+.a2-ofw .b4 img{
+  margin-top: 4px;
+}
+.a1 .b1 .c2-ofw {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 35px;
+  line-height: 52px;
+  display: flex;
+  align-items: center;
+  
+  color: #28c9bb;
+}
+.a1 .b2 .c4-ofw {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-left: 35px;
+  width: 80px;
+  height: 80px;
+  background: #28c9bb;
+  border-radius: 10px;
+}
 .snr {
   width: 325px;
   height: 140px;
-  margin-top: 20px;
-  margin-left: 15px;
+  margin: 10px 10px;
   background: #F8F8F8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
@@ -714,8 +978,7 @@ tr:nth-child(even) {
 .students {
   width: 325px;
   height: 140px;
-  margin-top: 20px;
-  margin-left: 15px;
+  margin: 10px 10px;
   background: #F8F8F8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
