--- a/Kapstondaw/BACKENDMONATO/style2.css
+++ b/Kapstondaw/BACKENDMONATO/style2.css
@@ -12,25 +12,37 @@
   width: 100%;
 }
 .left_officials .first_layer {
-  height: 50px;
-  width: 100%;
   background: rgba(0, 0, 0, 0.05);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);  
-  border-bottom-right-radius: 10px;
+  width: 100%;
+  height: 50px;
   margin-top: 85px;
+  display: flex;
+  align-items: center;
+
+  justify-content: space-between;
 }
 .left_officials .first_layer p {
   font-family: 'Poppins';
   font-style: normal;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 20px;
   line-height: 38px;
   /* identical to box height */
+  margin-left: 40px;
+  
   color: #007236;
-  margin-left: 35px;
-  padding-top: 5px;
 }
-
+.left_officials .first_layer a {
+  font-family: 'Poppins';
+  font-style: italic;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 38px;
+  /* identical to box height */
+  margin-right: 50px;
+  color: black;
+}
 .left_officials .second_layer {
   display: flex;
   margin-left: 20px;
